# meridian

./: .env.example  .gitignore  Makefile  README.md  audit.py  discover_out.json  docker-compose.dev.yml  docker-compose.yml  explain_out.json  pyproject.toml  test_payload.json
contracts/routing-registry/: Cargo.toml
contracts/routing-registry/src/: admin.rs  errors.rs  lib.rs  storage.rs  test.rs  types.rs
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: asset-selector.tsx  network-stats.tsx  route-explorer.tsx  status-bar.tsx  wallet-connect.tsx
infra/migrations/: alembic.ini  env.py
infra/scripts/: healthcheck.sh
services/api/: Dockerfile  pyproject.toml
services/graph-engine/: Dockerfile  pyproject.toml
services/graph-engine/app/: __init__.py  main.py
services/graph-engine/app/execution/: __init__.py  planner.py  risk.py  simulator.py  validator.py
services/graph-engine/app/graph/: __init__.py  builder.py  manager.py
services/graph-engine/app/pathfinding/: __init__.py  cache.py  engine.py  scoring.py  simulation.py  strategies.py
services/graph-engine/app/routes/: __init__.py  discover.py  graph.py  health.py
services/graph-engine/tests/: test_builder.py  test_engine_validation.py  test_health.py  test_manager.py  test_routes.py  test_simulation_hardening.py
services/ingestion/: Dockerfile  pyproject.toml
services/predictive-engine/: Dockerfile  pyproject.toml
services/quality-oracle/: Dockerfile  pyproject.toml
services/quality-oracle/app/: __init__.py  main.py
services/quality-oracle/app/oracle/: __init__.py  scorer.py
services/quality-oracle/app/routes/: __init__.py  health.py  quality.py
services/route-optimizer/: Dockerfile  pyproject.toml
services/route-optimizer/app/: __init__.py  main.py
services/route-optimizer/app/optimizer/: __init__.py  engine.py  simulator.py
services/route-optimizer/app/routes/: __init__.py  health.py  optimize.py
services/route-optimizer/tests/: test_health.py  test_simulator.py
tests/integration/: test_end_to_end.sh
(+26 files in other folders)
