[project]
name = "meridian"
version = "0.1.0"
description = "AI-powered routing intelligence network for Stellar"
requires-python = ">=3.11"
license = {text = "BUSL-1.1"}

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "ICN", "PIE", "T20", "SIM", "TCH"]
ignore = ["S101", "S104"]

[tool.ruff.lint.isort]
known-first-party = ["meridian_shared"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["services/*/tests", "packages/shared/tests"]
filterwarnings = ["ignore::DeprecationWarning"]
