[project]
name = "meridian-graph-engine"
version = "0.1.0"
description = "Meridian Graph Discovery Engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "networkx>=3.2,<4",
    "meridian-shared @ file:///${PROJECT_ROOT}/packages/shared",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27"]
