[project]
name = "meridian-quality-oracle"
version = "0.1.0"
description = "Meridian Route Quality Oracle"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "meridian-shared @ file:///${PROJECT_ROOT}/packages/shared",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27"]
